backend/networkpolicy-allow-gateway.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-gateway-ingress
  namespace: taskflow-backend
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: taskflow-frontend
      podSelector:
        matchLabels:
          app: gateway
    ports:
    - protocol: TCP
      port: 5000  
    - protocol: TCP
      port: 8081   
    - protocol: TCP
      port: 3001   
    - protocol: TCP
      port: 5001
